--- a/BudgetApp/BudgetApp/BudgetApp.csproj
+++ b/BudgetApp/BudgetApp/BudgetApp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="BudgetEntity.cs" />
     <Compile Include="BugetService.cs" />
+    <Compile Include="Check.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +60,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Budget.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
